[package]
name = "icov3"
version = "0.1.0"
authors = ["ezaanm <emangalji@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { version = "0.6.0-alpha3" }
cw2 = { version = "0.6.0-alpha3" }
cw20 = { version = "0.6.0-alpha3" }
cw20-base = { version = "0.6.0-alpha3", features = ["library"] }
cosmwasm-std = { version = "0.14.0-beta1", features = ["iterator"] }
cw-storage-plus = { version = "0.6.0-alpha3", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0-beta1" }
cw-multi-test = { version = "0.6.0-alpha3" }
cw20-base = { version = "0.6.0-alpha3", features = ["library"] }
